更新页面的效果，以及使用github+jsdelivr上传图片到自定义图床

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -6,7 +6,7 @@
     <title>异常</title>
 </head>
 <body>
-<h1 style="text-align: center">出现错误</h1>
-<h1 th:if="${msg}!=null">[[${msg}]]</h1>
+
+<h1 style="text-align: center" th:if="${msg}!=null">[[${msg}]]</h1>
 </body>
 </html>
