--- a/src/main/resources/templates/admin/conn.html
+++ b/src/main/resources/templates/admin/conn.html
@@ -33,7 +33,7 @@
 
                 </ul>
             </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+        </div>
     </nav>
 
     <div class="col-xs-2" th:fragment="cbl">
