--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <link rel="stylesheet" th:href="@{/css/index-3dimg.css}">
+    <link rel="stylesheet" th:href="@{/css/loading.css}">
     <style>
         *{
             margin: 0;
@@ -32,7 +33,7 @@
 <body>
 
 <div class="container-fluid"  >
-    <nav class="navbar  navbar-inverse" style="margin-bottom: 0;border: none">
+    <nav class="navbar navbar-inverse " style="margin-bottom:0 ">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header" >
@@ -48,27 +49,34 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">首页 <span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="/">首页 <span class="sr-only">(current)</span></a></li>
 <!--                    <li><a th:href="@{}">博客</a></li>-->
-                </ul>
-                <ul class="nav navbar-nav tx " th:if="${user}!=null" style="position: relative" >
-                    <li >
-                        <a href="#">
-                        <img th:src="${user.headPortrait}" class="img-circle"  id="touxiang" width="20px" height="20px">
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
                     <li th:if="${user}==null" ><a th:href="@{/login}">登录</a></li>
                     <li th:if="${user}==null" ><a th:href="@{/registered}">注册</a></li>
-
+                    <li th:if="${user}!=null">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <img class="img-circle" th:src="${user.headPortrait}" alt="头像" style="margin: -5px;" width="35px">
+                            &nbsp;
+                            <strong id="id_user_username">[[${user.name}]]</strong>
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="divider"></li>
+                            <li><a href = "/user/personalCenter">个人中心</a></li>
+                            <li><a href = "/user/userBlogList">我的博客</a></li>
+                            <li><a href = "/user/addBlog">写博客</a></li>
+                            <li class = "divider"></li>
+                            <li><a href = "/logout">登出</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-    <div class="jumbotron" style="background-image: url('/img/blog/2.jpeg');background-size:100% auto;background-position-y:10%;border: none;">
+    <div class="jumbotron" style="background-image: url('https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/1228a0bf5a46394a7f8c51202b055a8864.jpeg');background-size:100% auto;background-position-y:10%;border: none;">
 
         <div class="container">
             <h1>Hello World</h1>
@@ -83,7 +91,8 @@
                             <div class="front" style="background-image: url('/img/2.png');" >
                                 <div class="inner">
                                     <p th:text="${blog.title}"></p>
-                                    <span>xiuyuandashen 写于 <span th:text="${#dates.format(blog.time, 'yyyy-MM-dd')}"></span></span>
+                                    <p th:text="${blog.userName}"></p>
+                                    <span th:text="${#dates.format(blog.time, 'yyyy-MM-dd')}"></span>
                                 </div>
                             </div>
                             <div class="back">
@@ -128,61 +137,32 @@
     </div>
     <div th:replace="~{ admin/conn ::  dibu }"></div>
 </div>
+
+<div class="a">
+    <div class="loading">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</div>
 <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<!--<script>-->
-<!--    var elementNodeListOf = document.querySelectorAll("#page");-->
-<!--    elementNodeListOf.forEach(function (item,i) {-->
-<!--        item.addEventListener('click',function () {-->
+<script>
 
-<!--        })-->
-<!--    })-->
-<!--</script>-->
-    <script>
-        var touxiang = document.querySelector("#touxiang");
-        touxiang.addEventListener("mouseover",()=>{
-            if(document.querySelector(".caidan")==null){
+    document.onreadystatechange = function() 　　//当页面加载状态改变的时候执行function
 
-                var div = document.createElement("div");
-                div.className = "caidan"
-                div.style.width="100px";
-                div.innerHTML=`
-                <ul style="background-color: white;box-shadow: 0 0 5px #999;text-align: left;list-style: none;padding: 3px" >
-                    <li style="line-height: 30px">
-                    <span class="glyphicon glyphicon-home" style="margin:0  5px 0 5px;" aria-hidden="true"></span>
-                    <a href="/user/personalCenter" style="color: #999999">个人中心</a>
-                    </li>
-                    <li style="line-height: 30px">
-                    <span class="glyphicon glyphicon-th-list" style="margin:0  5px 0 5px;" aria-hidden="true"></span>
-                    <a href="/user/userBlogList" style="color: #999999">我的博客</a>
-                    </li>
-                    <li style="line-height: 30px">
-                    <span class="glyphicon glyphicon-pencil" style="margin:0  5px 0 5px;" aria-hidden="true"></span>
-                    <a href="/user/addBlog" style="color: #999999">写博客</a>
-                    </li>
-                    <li style="line-height: 30px">
-                    <span class="glyphicon glyphicon-off" style="margin:0 5px 0 5px;" aria-hidden="true"></span>
-                    <a href="/logout" style="color: #999999">注销</a>
-                    </li>
+    {
 
-                </ul>
-            `
-                let tx = document.querySelector(".tx")
-                tx.appendChild(div)
-                div.style.position =  "absolute";
-                div.style.top = "50px"
-                div.style.left = "0px"
-                div.addEventListener("mouseleave",()=>{
-                    tx.removeChild(document.querySelector(".caidan"))
-                })
-            }else{
+        if(document.readyState == "complete")
 
-            }
+        { 　　//当页面加载状态为完全结束时进入
 
-
-        })
-
-    </script>
+             document.querySelector(".a").style.display = "none";
+        }
+    }
+</script>
 
 
 </body>
