--- a/src/main/resources/templates/userBlogAdd.html
+++ b/src/main/resources/templates/userBlogAdd.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" th:href="@{/css/loading.css}">
     <style>
         *{
             margin: 0;
@@ -30,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#" style="padding: 15px 24px">个人博客</a>
+                <a class="navbar-brand" href="/" style="padding: 15px 24px">个人博客</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,13 +40,26 @@
                     <li class="active"><a href="/">首页 <span class="sr-only">(current)</span></a></li>
                     <!--                    <li><a th:href="@{}">博客</a></li>-->
                 </ul>
-                <ul class="nav navbar-nav tx " th:if="${user}!=null" style="position: relative" >
-                    <li ><a href="#"><img th:src="${user.headPortrait}" class="img-circle"  id="touxiang" width="20px"><span class="sr-only">(current)</span></a></li>
-                </ul>
                 <ul class="nav navbar-nav navbar-right">
 
                     <li th:if="${user}==null" ><a th:href="@{/login}">登录</a></li>
-
+                    <li th:if="${user}==null" ><a th:href="@{/registered}">注册</a></li>
+                    <li th:if="${user}!=null">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <img class="img-circle" th:src="${user.headPortrait}" alt="头像" style="margin: -5px;" width="35px">
+                            &nbsp;
+                            <strong id="id_user_username">[[${user.name}]]</strong>
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="divider"></li>
+                            <li><a href = "/user/personalCenter">个人中心</a></li>
+                            <li><a href = "/user/userBlogList">我的博客</a></li>
+                            <li><a href = "/user/addBlog">写博客</a></li>
+                            <li class = "divider"></li>
+                            <li><a href = "/logout">登出</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -71,52 +85,33 @@
     </div>
     <div th:replace="~{ admin/conn ::  dibu }"></div>
 </div>
-
+<div class="a">
+    <div class="loading">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</div>
 </body>
 <script th:src="@{/js/ajax.js}"></script>
-<script>
-    var touxiang = document.querySelector("#touxiang");
-    touxiang.addEventListener("mouseover",()=>{
-        if(document.querySelector(".caidan")==null){
-            let userId = [[${user.id}]]
-            var div = document.createElement("div");
-            div.className = "caidan"
-            div.style.width="100px";
-            div.innerHTML=`
-                <ul style="background-color: white;box-shadow: 0 0 5px #999;text-align: left;list-style: none;padding: 3px" >
-                    <li style="line-height: 30px">
-                    <span class="glyphicon glyphicon-home" style="margin:0  5px 0 5px;" aria-hidden="true"></span>
-                    <a href="/user/personalCenter" style="color: #999999">个人中心</a>
-                    </li>
-                    <li style="line-height: 30px">
-                    <span class="glyphicon glyphicon-th-list" style="margin:0  5px 0 5px;" aria-hidden="true"></span>
-                    <a href="/user/userBlogList" style="color: #999999">我的博客</a>
-                    </li>
-                    <li style="line-height: 30px">
-                    <span class="glyphicon glyphicon-pencil" style="margin:0  5px 0 5px;" aria-hidden="true"></span>
-                    <a href="/user/addBlog" style="color: #999999">写博客</a>
-                    </li>
-                    <li style="line-height: 30px">
-                    <span class="glyphicon glyphicon-off" style="margin:0 5px 0 5px;" aria-hidden="true"></span>
-                    <a href="/logout" style="color: #999999">注销</a>
-                    </li>
 
-                </ul>
-            `
-            let tx = document.querySelector(".tx")
-            tx.appendChild(div)
-            div.style.position =  "absolute";
-            div.style.top = "50px"
-            div.style.left = "0px"
-            div.style.zIndex="10"
-            div.addEventListener("mouseleave",()=>{
-                tx.removeChild(document.querySelector(".caidan"))
-            })
+<script>
+
+    document.onreadystatechange = function() 　　//当页面加载状态改变的时候执行function
+
+    {
+
+        if(document.readyState == "complete")
+
+        { 　　//当页面加载状态为完全结束时进入
+
+            document.querySelector(".a").style.display = "none";
         }
-    })
+    }
 
-</script>
-<script>
+
     var testEditor;
     testEditor = editormd("test-editormd", {
         placeholder: '本编辑器支持Markdown编辑，左边编写，右边预览', //默认显示的文字，这里就不解释了
