增加了博客搜索功能

--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -107,7 +107,7 @@
                     <img th:src="@{/img/4.png}" alt="" class="img-circle" style="width: 70px;height: 70px;margin: 0 auto" >
                 </div>
                 <div class="col-lg-11" style="display: flex;justify-content: flex-start;">
-                    <textarea class="FplText" id="fpl" style="width: 800px;max-width: 800px;height: auto;min-width: 800px;min-height: 80px;"></textarea>
+                    <textarea class="FplText form-control" id="fpl" style="width: 800px;max-width: 800px;height: auto;min-width: 800px;min-height: 80px;"></textarea>
                     <button class="btn btn-success Fpinglun" id="PL" style="max-width: 80px;margin-left: 10px">评论</button>
                 </div>
             </div>
