增加了用户个人中心修改信息的功能

--- a/src/main/resources/templates/admin/conn.html
+++ b/src/main/resources/templates/admin/conn.html
@@ -6,34 +6,49 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-default navbar-inverse" th:fragment="common_haeder">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">后台管理</a>
-            </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class=""><a th:href="@{/}">首页 <span class="sr-only">(current)</span></a></li>
-                    <li class="active"><a href="#">博客</a></li>
+    <nav class="navbar navbar-inverse " style="margin-bottom:0 ;" th:fragment="common_haeder">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header" style="margin-right: 0">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#" style="padding: 15px 24px">code常记日常</a>
+                </div>
 
-                </ul>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="/">首页 <span class="sr-only">(current)</span></a></li>
+                        <!--                    <li><a th:href="@{}">博客</a></li>-->
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">管理员</a></li>
-                    <li><a th:href="@{/logout}">注销</a></li>
-
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div>
+                        <li th:if="${user}==null" ><a th:href="@{/login}">登录</a></li>
+                        <li th:if="${user}==null" ><a th:href="@{/registered}">注册</a></li>
+                        <li th:if="${user}!=null">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <img class="img-circle" th:src="${user.headPortrait}" alt="头像" style="margin: -5px;" width="35px">
+                                &nbsp;
+                                <strong id="id_user_username">[[${user.name}]]</strong>
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li class="divider"></li>
+                                <li><a href = "/user/personalCenter">个人中心</a></li>
+                                <li><a href = "/user/userBlogList">我的博客</a></li>
+                                <li><a href = "/user/addBlog">写博客</a></li>
+                                <li class = "divider"></li>
+                                <li><a href = "/logout">登出</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
     </nav>
 
     <div class="col-xs-2" th:fragment="cbl">
@@ -46,11 +61,11 @@
         </ul>
     </div>
 
-    <div class="container-fluid" th:fragment="dibu" id="dibu">
-        <div class="panel panel-heading">
+    <div class="container-fluid" th:fragment="dibu" id="dibu" >
+        <div class="panel panel-heading col-xs-12 col-md-12" >
             <div class="panel-body" style="text-align: center">
-                <h5>Copyright © 2020 xiuyuandashen</h5>
-                <h5>Powered by SpringBoot</h5>
+                <h5 style="color:#999999;">©2020 zlf.plus  <a href="http://beian.miit.gov.cn" style="list-style: none;color: #999999">闽ICP备2020022741号</a></h5>
+<!--                <h5></h5>-->
             </div>
         </div>
     </div>
