--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>异常</title>
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/228573cc37f47e46319a7b18289b8723a6.png">
+    <link rel="Bookmark" href="https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/228573cc37f47e46319a7b18289b8723a6.png">
 </head>
 <body>
 
 <h1 style="text-align: center" th:if="${msg}!=null">[[${msg}]]</h1>
+<div th:replace="~{ admin/conn ::  dibu }"></div>
 </body>
 </html>
