--- a/src/main/resources/templates/admin/blog_list.html
+++ b/src/main/resources/templates/admin/blog_list.html
@@ -11,6 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/228573cc37f47e46319a7b18289b8723a6.png">
+    <link rel="Bookmark" href="https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/228573cc37f47e46319a7b18289b8723a6.png">
 </head>
 <body>
 <div class="container-fluid">
@@ -23,15 +25,16 @@
                     <th>博客名称</th>
                     <th>博客标题</th>
                     <th>修改时间</th>
-                    <th>作者</th>
+                    <th>作者id</th>
                     <th>修改</th>
                 </tr>
                 <tr th:each="blog : ${blogPageInfo.list}">
                     <td th:text="${blog.getbName()}"></td>
                     <td th:text="${blog.getTitle()}"></td>
                     <td th:text="${#dates.format(blog.getTime(),'yyyy-MM-dd ')}"></td>
-                    <td>秀元</td>
+                    <td th:text="${blog.userId}"></td>
                     <td><a th:href="@{/admin/blog/{id}/update(id=${blog.getBid()})}">修改</a></td>
+                    <td><a th:href="@{/admin/blog/delete/{id}(id=${blog.getBid()})}">删除</a></td>
                 </tr>
             </table>
             <nav aria-label="Page navigation" style="display: flex;justify-content: center">
@@ -53,5 +56,6 @@
         </div>
     </div>
 </div>
+<div th:replace="~{ admin/conn ::  dibu }"></div>
 </body>
 </html>
