--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -2,12 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>博客名称</title>
+    <title>[[${blog.title}]]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/228573cc37f47e46319a7b18289b8723a6.png">
+    <link rel="Bookmark" href="https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/228573cc37f47e46319a7b18289b8723a6.png">
     <link rel="stylesheet" th:href="@{/editor.md-master/css/editormd.css}"/>
     <link rel="shortcut icon" href="https://pandao.github.io/editor.md/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" th:href="@{/css/loading.css}">
@@ -30,54 +32,12 @@
 </head>
 <body>
 <div class="container-fluid">
-    <nav class="navbar  navbar-inverse" style="margin-bottom: 0;border: none">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header" >
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#" style="padding: 15px 24px">个人博客</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">首页 <span class="sr-only">(current)</span></a></li>
-                    <!--                    <li><a th:href="@{}">博客</a></li>-->
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-
-                    <li th:if="${user}==null" ><a th:href="@{/login}">登录</a></li>
-                    <li th:if="${user}==null" ><a th:href="@{/registered}">注册</a></li>
-                    <li th:if="${user}!=null">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img class="img-circle" th:src="${user.headPortrait}" alt="头像" style="margin: -5px;" width="35px">
-                            &nbsp;
-                            <strong id="id_user_username">[[${user.name}]]</strong>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li class="divider"></li>
-                            <li><a href = "/user/personalCenter">个人中心</a></li>
-                            <li><a href = "/user/userBlogList">我的博客</a></li>
-                            <li><a href = "/user/addBlog">写博客</a></li>
-                            <li class = "divider"></li>
-                            <li><a href = "/logout">登出</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
+    <div th:replace="~{ admin/conn ::  common_haeder }"></div>
     <div class="jumbotron" style="background-image: url('/img/blog/2.jpeg');background-size:100% auto;background-position-y:10%;border: none;margin-bottom: 5px">
 
         <div class="container">
             <h1>Hello World</h1>
-            <p style="color: #999">欢迎来到 [[${blog.userName}]] 的个人博客</p>
+            <p  style="color: #999">欢迎来到 [[${blog.userName}]] 的个人博客</p>
         </div>
     </div>
     <ol class="breadcrumb">
@@ -98,16 +58,16 @@
         </div>
 
 
-        <div  class="row col-xs-12" style="margin-bottom: 5vh">
+        <div  class="row col-xs-10 col-xs-offset-1" style="margin-bottom: 5vh">
             <div class="pinglun1" style="display: flex;justify-content: space-between;align-items: center">
-                <div th:if="${user}!=null" class="touxiang col-lg-1" style="display: flex">
-                    <img th:src="${user.headPortrait}" alt="" class="img-circle" style="width: 70px;height: 70px;margin: 0 auto" id="headImg">
+                <div th:if="${user}!=null" class="touxiang col-xs-2" style="display: flex;justify-content: flex-end">
+                    <img th:src="${user.headPortrait}" alt="" class="img-circle" style="width: 50px;height: 50px;margin-right: 1vw" id="headImg">
                 </div>
-                <div th:if="${flag}=='false'" class="touxiang col-lg-1" style="display: flex">
-                    <img th:src="@{/img/4.png}" alt="" class="img-circle" style="width: 70px;height: 70px;margin: 0 auto" >
+                <div th:if="${flag}=='false'" class="touxiang col-xs-2" style="display: flex;justify-content: flex-end">
+                    <img th:src="@{/img/4.png}" alt="" class="img-circle" style="width: 50px;height: 50px;margin-right: 1vw;margin-left: 1vw" >
                 </div>
-                <div class="col-lg-11" style="display: flex;justify-content: flex-start;">
-                    <textarea class="FplText form-control" id="fpl" style="width: 800px;max-width: 800px;height: auto;min-width: 800px;min-height: 80px;"></textarea>
+                <div class="col-xs-10" style="display: flex;justify-content: flex-start;">
+                    <textarea class="FplText form-control" id="fpl" style="height: auto;min-height: 80px;"></textarea>
                     <button class="btn btn-success Fpinglun" id="PL" style="max-width: 80px;margin-left: 10px">评论</button>
                 </div>
             </div>
@@ -122,19 +82,19 @@
                         <span class="label label-primary" style="margin-left: 7px"> [[${item.createTime}]] </span>
                         <small id="huiFuBtn" style="color: #999999;margin-left: 5px;">回复</small>
                     </div>
-                    <div class="pinglun" style="display: none;justify-content: space-between;align-items: center;width:80%;height:100%;margin-left: 100px;border-left: 1px solid #ddd;">
+                    <div class="pinglun" style="display: none;justify-content: space-between;align-items: center;width:80%;height:100%;margin-left: 4vw;margin-top: 20px">
                         <div class="touxiang" style="display: flex;width:80px;">
                             <img th:if="${user}!=null" th:src="${user.headPortrait}" alt="" class="img-circle" style="width: 50px;height: 50px;" >
                             <img th:if="${user}==null" src="/img/4.png" alt="" class="img-circle" style="width: 50px;height: 50px;" >
                         </div>
                         <div class="" style="display: flex;justify-content: flex-start;width:90%;align-items: center">
-                            <textarea class="FplText" id="hf" style="width: 80%;height: 80%;min-width: 600px;max-height: 80px;min-height: 50px"></textarea>
+                            <textarea class="FplText" id="hf" style="width: 80%;height: 80%;max-height: 80px;min-height: 50px"></textarea>
                             <button class="btn btn-success Fpinglun" id="btnhf" style="width: 80px;margin-left: 10px">评论</button>
-                            <small id="quxiaohuifu" style="color: red;margin-left: 7px">取消回复</small>
+                            <small id="quxiaohuifu" style="color: red;margin-left: 7px">取消</small>
                         </div>
                     </div>
                 </div>
-                <div th:if="${item.getReplyVO().size()}>0" th:each="it :${item.getReplyVO()}" class="panel-body" th:pid="${item.commentId}" th:commentId="${it.commentId}" th:userId="${it.userId}" th:replyUserId="${it.replyUserId}" style="margin-left:100px;border-left: 1px solid #ddd;">
+                <div th:if="${item.getReplyVO().size()}>0" th:each="it :${item.getReplyVO()}" class="panel-body" th:pid="${item.commentId}" th:commentId="${it.commentId}" th:userId="${it.userId}" th:replyUserId="${it.replyUserId}" style="margin-left:4vw;border-left: 1px solid #ddd;">
                     <div style="display:flex;justify-content: start;align-items: center;">
                         <img th:src="${it.headPortrait}" alt="" class="img-circle" style="width: 50px;height: 50px;margin-right: 20px;">
                         [[${it.userName}]]  对   [[${it.replyUserName}]]  说：
@@ -149,9 +109,9 @@
                             <img th:if="${user}==null" src="/img/4.png" alt="" class="img-circle" style="width: 50px;height: 50px;" >
                         </div>
                         <div class="" style="display: flex;justify-content: flex-start;width:90%;align-items: center">
-                            <textarea class="FplText" id="hf" style="width: 80%;height: 80%;min-width: 600px;max-height: 80px;min-height: 50px"></textarea>
+                            <textarea class="FplText" id="hf" style="width: 80%;height: 80%;max-height: 80px;min-height: 50px"></textarea>
                             <button class="btn btn-success Fpinglun" id="btnhf" style="width: 80px;margin-left: 10px">评论</button>
-                            <small id="quxiaohuifu" style="color: red;margin-left: 7px">取消回复</small>
+                            <small id="quxiaohuifu" style="color: red;margin-left: 7px">取消</small>
                         </div>
                     </div>
 
