--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <title>主页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="">
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/228573cc37f47e46319a7b18289b8723a6.png">
+    <link rel="Bookmark" href="https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/228573cc37f47e46319a7b18289b8723a6.png">
     <link rel="stylesheet" th:href="@{/css/index-3dimg.css}">
     <link rel="stylesheet" th:href="@{/css/loading.css}">
     <style>
@@ -35,54 +38,12 @@
 <body>
 
 <div class="container-fluid"  >
-    <nav class="navbar navbar-inverse " style="margin-bottom:0 ">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header" >
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#" style="padding: 15px 24px">个人博客</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">首页 <span class="sr-only">(current)</span></a></li>
-<!--                    <li><a th:href="@{}">博客</a></li>-->
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-
-                    <li th:if="${user}==null" ><a th:href="@{/login}">登录</a></li>
-                    <li th:if="${user}==null" ><a th:href="@{/registered}">注册</a></li>
-                    <li th:if="${user}!=null">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img class="img-circle" th:src="${user.headPortrait}" alt="头像" style="margin: -5px;" width="35px">
-                            &nbsp;
-                            <strong id="id_user_username">[[${user.name}]]</strong>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li class="divider"></li>
-                            <li><a href = "/user/personalCenter">个人中心</a></li>
-                            <li><a href = "/user/userBlogList">我的博客</a></li>
-                            <li><a href = "/user/addBlog">写博客</a></li>
-                            <li class = "divider"></li>
-                            <li><a href = "/logout">登出</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
+    <div th:replace="~{ admin/conn ::  common_haeder }"></div>
     <div class="jumbotron" style="background-image: url('https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/1228a0bf5a46394a7f8c51202b055a8864.jpeg');background-size:100% auto;background-position-y:10%;border: none;">
 
         <div class="container">
             <h1>Hello World</h1>
-            <p style="color: #999">这是一个简约的博客网站</p>
+            <p style="color: #999">执笔画江山。</p>
         </div>
     </div>
     <div class="container" >
@@ -103,7 +64,6 @@
                         <div class="front" style="background-image: url('/img/2.png');" >
                             <div class="inner">
                                 <p th:text="${blog.title}"></p>
-                                <p th:text="${blog.userName}"></p>
                                 <span th:text="${#dates.format(blog.time, 'yyyy-MM-dd')}"></span>
                             </div>
                         </div>
