--- a/src/main/resources/templates/userBlogList.html
+++ b/src/main/resources/templates/userBlogList.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>博客列表</title>
+    <title>[[${user.name}]]的博客列表～～</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
@@ -12,109 +12,102 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <link rel="stylesheet" th:href="@{/css/loading.css}">
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/228573cc37f47e46319a7b18289b8723a6.png">
+    <link rel="Bookmark" href="https://cdn.jsdelivr.net/gh/xiuyuandashen/figureBed/2020/12/228573cc37f47e46319a7b18289b8723a6.png">
     <style>
         *{
             padding: 0;
             margin: 0;
         }
+        @media (max-width: 768px) {
+            .userMsg{
+                display: none;
+            }
+            .TouXiang{
+                margin-top: 30px;
+            }
+
+        }
+        @media (min-width: 768px) {
+            .userMsg1{
+                display: none;
+            }
+        }
     </style>
 </head>
 <body>
-<div class="container-fluid" style="padding: 0">
-    <nav class="navbar  navbar-inverse" style="margin-bottom: 0;border: none">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header" >
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#" style="padding: 15px 24px">个人博客</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">首页 <span class="sr-only">(current)</span></a></li>
-                    <!--                    <li><a th:href="@{}">博客</a></li>-->
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-
-                    <li th:if="${user}==null" ><a th:href="@{/login}">登录</a></li>
-                    <li th:if="${user}==null" ><a th:href="@{/registered}">注册</a></li>
-                    <li th:if="${user}!=null">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img class="img-circle" th:src="${user.headPortrait}" alt="头像" style="margin: -5px;" width="35px">
-                            &nbsp;
-                            <strong id="id_user_username">[[${user.name}]]</strong>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li class="divider"></li>
-                            <li><a href = "/user/personalCenter">个人中心</a></li>
-                            <li><a href = "/user/userBlogList">我的博客</a></li>
-                            <li><a href = "/user/addBlog">写博客</a></li>
-                            <li class = "divider"></li>
-                            <li><a href = "/logout">登出</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
-    <div class="row" style="margin-top: 10px">
-        <div class="col-xs-3">
-            <div class="col-xs-12">
-                <div class="thumbnail">
-                    <img th:src="${user.headPortrait}" alt="...">
-                    <div class="caption">
-                        <h3>[[${user.name}]]</h3>
-                        <p>博客数量: [[${blogNumber}]]</p>
-                    </div>
+<div class="container-fluid" style="padding: 0;min-height: 100vh">
+    <div th:replace="~{ admin/conn ::  common_haeder }"></div>
+    <div class="row" style="margin:0;display: flex;justify-content: center">
+        <div class="col-xs-12 userMsg1" >
+            <div class="thumbnail TouXiang">
+                <img th:src="${user.headPortrait}" alt="...">
+                <div class="caption">
+                    <h3>[[${user.name}]]</h3>
+                    <p>博客数量: [[${blogNumber}]]</p>
                 </div>
             </div>
         </div>
-        <div class="col-xs-9">
-            <div class="row">
-                <div class="col-sm-12 col-md-12" >
-                    <div class="thumbnail" th:each="blog : ${blogPageInfo.list}">
+    </div>
+
+
+        <div class="row" style="margin-top: 10px;margin-left: 0;margin-right: 0;display: flex;justify-content: center">
+
+            <div class="col-xs-12 col-md-2 userMsg" style="min-width: 300px" >
+                <div class="col-xs-12 col-md-12">
+                    <div class="thumbnail">
+                        <img th:src="${user.headPortrait}" alt="...">
                         <div class="caption">
-                            <h3>[[${blog.title}]]</h3>
-                            <p>[[${blog.bName}]]</p>
-                            <p>
-                                <a th:href="@{/blog/queryId(id=${blog.getBid()})}" class="btn btn-primary" role="button">阅读</a>
-                                <a th:href="@{/admin/blog/{id}/update(id=${blog.getBid()})}" class="btn btn-primary" role="button">修改</a>
-                                <a th:href="@{/delete/{id}(id=${blog.getBid()})}" class="btn btn-primary" role="button">删除</a>
-                            </p>
+                            <h3>[[${user.name}]]</h3>
+                            <p>博客数量: [[${blogNumber}]]</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <nav aria-label="Page navigation" style="display: flex;justify-content: center">
-                    <ul class="pagination">
-                        <li>
-                            <a href="#" aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                        <li th:each="pageNums :${blogPageInfo.navigatepageNums}" th:class="${pageNums == blogPageInfo.getPageNum()?'active':''}"><a th:href="@{/user/userBlogList(pageNum=${pageNums})}" th:text="${pageNums}"></a> </li>
+<!--            <div class="col-xs-12 col-md-6">-->
+                <div class="row" style="margin-right: 0;margin-left: 0;display: flex;justify-content: center;">
+                    <div class="col-xs-12 col-md-12" >
+                        <div class="thumbnail" th:each="blog : ${blogPageInfo.list}">
+                            <div class="caption">
+                                <h3>[[${blog.title}]]</h3>
+                                <p>[[${blog.bName}]]</p>
+                                <p>
+                                    <a th:href="@{/blog/queryId(id=${blog.getBid()})}" class="btn btn-primary" role="button">阅读</a>
+                                    <a th:href="@{/admin/blog/{id}/update(id=${blog.getBid()})}" class="btn btn-primary" role="button">修改</a>
+                                    <a th:href="@{/delete/{id}(id=${blog.getBid()})}" class="btn btn-primary" role="button">删除</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-                        <li>
-                            <a href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
 
+
+<!--            </div>-->
         </div>
+    <div class="row" style="margin-right: 0">
+        <nav aria-label="Page navigation" style="display: flex;justify-content: center">
+            <ul class="pagination">
+                <li>
+                    <a href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li th:each="pageNums :${blogPageInfo.navigatepageNums}" th:class="${pageNums == blogPageInfo.getPageNum()?'active':''}"><a th:href="@{/user/userBlogList(pageNum=${pageNums})}" th:text="${pageNums}"></a> </li>
+
+                <li>
+                    <a href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
-    <div th:replace="~{ admin/conn ::  dibu }"></div>
+
+
+
 </div>
+<div th:replace="~{ admin/conn ::  dibu }"></div>
 <div class="a">
     <div class="loading">
         <span></span>
